--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
 <body>
 <article>
   <header>
-    <h2>Routers</h2>
-    <p>Introducción a la configuración</p>
+    <h2>DIS</h2>
+    <p>Diseño e implantación de servidores</p>
   </header>
-  <p>Los routers son dispositivos esenciales en una red TCP/IP.</p>
-  <section>
-    <h3>Configuración básica</h3>
-    <p>Esta sección describe los pasos a seguir para configurar el router</p>
-  </section>
-  <section>
-    <h3>Configuración de seguridad</h3>
-    <p>Parámetros de seguridad al configurar el router</p>
-  </section>
-  <footer>
-    <nav>Enlaces a manuales del fabricante</nav>
-  </footer>
 </article>
 </body>
